SERVER-74245 Encode 'ExpressionContext::needsMerge' in SBE plan cache keys

(cherry picked from commit 6ad0ba2141f14bdbd71d064b9aab04bb967617f2)